--- a/_layouts/people_search.html
+++ b/_layouts/people_search.html
@@ -58,7 +58,7 @@
           </div>
           <div class="row">
             <div class="col-sm-12">
-              <h2 class="display-4">Founding Directors</h2>
+              <h2 class="display-4">Director</h2>
               <hr />
               <br />
             </div>
