--- a/_includes/people_listing_all.html
+++ b/_includes/people_listing_all.html
@@ -10,6 +10,16 @@
 </div>
 <div class="row">
   <div class="col-sm-12">
+    <h2 class="display-4">Advisory Council</h2>
+    <hr />
+    <br />
+  </div>
+  {% for advisor in data.advisory %}
+    {% include person.html person=advisor %}
+  {% endfor %}
+</div>
+<div class="row">
+  <div class="col-sm-12">
     <h2 class="display-4">Leadership Team</h2>
     <hr />
     <br />
