Fix breadcrumb for videos

--- a/_includes/breadcrumb.html
+++ b/_includes/breadcrumb.html
@@ -10,7 +10,9 @@
                     {% assign relative_breadcrumb_arr = breadcrumbs | slice:0, forloop.index %}
                     {% assign relative_breadcrumb_str = relative_breadcrumb_arr | join: "/" %}
                         {% if forloop.last %}
-                            <li class="breadcrumb-item active" aria-current="page">{{ breadcrumb | replace: "_", " " | capitalize }}</li>
+                            <li class="breadcrumb-item active" aria-current="page">{{ breadcrumb | replace: "_", " " | capitalize | replace: "-", " " }}</li>
+                        {% elsif breadcrumb == '_videos' %}
+                            <li class="breadcrumb-item"><a href="{{site.baseurl | append: "/overview/" }}">Overview</a></li>
                         {% else %}
                             <li class="breadcrumb-item"><a href="/{{site.baseurl}}{{relative_breadcrumb_str}}">{{ breadcrumb | replace: "_", " " | capitalize }}</a></li>
                         {% endif %}
