Open video links in new tab

--- a/_layouts/video.html
+++ b/_layouts/video.html
@@ -62,6 +62,8 @@
                   <a
                     href="{{material.url}}"
                     class="list-group-item list-group-item-action"
+                    target="_blank"
+                    rel="noopener noreferrer"
                     >{{material.title}}</a
                   >
                   {% endfor %}
@@ -81,6 +83,8 @@
                   <a
                     href="{{resource.url}}"
                     class="list-group-item list-group-item-action"
+                    target="_blank"
+                    rel="noopener noreferrer"
                     >{{resource.title}}</a
                   >
                   {% endfor %}
@@ -100,6 +104,8 @@
                   <a
                     href="{{exercise.url}}"
                     class="list-group-item list-group-item-action"
+                    target="_blank"
+                    rel="noopener noreferrer"
                     >{{exercise.title}}</a
                   >
                   {% endfor %}
