Temporarily remove filtering sidebar

--- a/_layouts/overview.html
+++ b/_layouts/overview.html
@@ -16,8 +16,8 @@
     <section>
       <div class="container">
         <div class="row">
-          {% comment %} sidebar {% endcomment %}
-          {% include videos_sidebar.html %}
+          {% comment %} sidebar {% endcomment %} {% comment %} {% include
+          videos_sidebar.html %} {% endcomment %}
           <div class="col-sm-8">{% include video_listing.html %}</div>
         </div>
       </div>
