--- a/_includes/videos_sidebar.html
+++ b/_includes/videos_sidebar.html
@@ -1,36 +1,131 @@
-        <div class="col-md-4">
-          <div class="alert alert-secondary border-0">
-            <small>We provide state-of-the art training in a range of different areas in computational social science from ethics to text analysis and mass collaboration.</small>
-          </div>
-          <div class="list-group mb-4">
-            <div class="list-group-item"><strong>Programing Languages</strong></div>
-            <a href="#" class="list-group-item list-group-item-action">Rust</a>
-            <a href="#" class="list-group-item list-group-item-action">Go</a>
-            <a href="#" class="list-group-item list-group-item-action">Python</a>
-          </div><!--/list-group-->
+<div class="col-md-4">
+  <div class="alert alert-secondary border-0">
+    <small
+      >We provide state-of-the art training in a range of different areas in
+      computational social science from ethics to text analysis and mass
+      collaboration.</small
+    >
+  </div>
+  <div class="list-group mb-4"></div>
+  {% comment %}
+  <div class="list-group-item"><strong>Programing Languages</strong></div>
+  <a href="#" class="list-group-item list-group-item-action">Rust</a>
+  <a href="#" class="list-group-item list-group-item-action">Go</a>
+  <a href="#" class="list-group-item list-group-item-action">Python</a> {%
+  endcomment %}
 
-          <div class="list-group mb-4">
-            <div class="list-group-item"><strong>Location</strong></div>
-            <a href="#" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">Beijing</a>
-            <a href="#" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">Bologna</a>
-            <a href="#" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">Chicago</a>
-            <a href="#" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">FGV/DAPP Brazil</a>
-            <a href="#" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">HSE University</a>
-            <a href="#" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">Helsinki</a>
-            <a href="#" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">Hong Kong</a>
-            <a href="#" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">Howard/Mathematica</a>
-            <a href="#" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">Istanbul</a>
-            <a href="#" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">Law</a>
-            <a href="#" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">Lisbon</a>
-            <a href="#" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">London</a>
-            <a href="#" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">Los Angeles</a>
-            <a href="#" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">Montréal</a>
-            <a href="#" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center active">Oxford <span class="badge badge-light badge-pill">✔</span></a>
-            <a href="#" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">Princeton University</a>
-            <a href="#" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">Rutgers</a>
-            <a href="#" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">Stellenbosch</a>
-            <a href="#" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">Taipei, Taiwan (National Chengchi University)</a>
-            <a href="#" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">Tokyo</a>
-            <a href="#" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">Zürich</a>
-          </div><!--/list-group-->
-        </div><!--/col-->
+  <!--/list-group-->
+
+  <div class="list-group mb-4">
+    {% comment %}
+    <div class="list-group-item"><strong>Location</strong></div>
+    <a
+      href="#"
+      class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
+      >Beijing</a
+    >
+    <a
+      href="#"
+      class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
+      >Bologna</a
+    >
+    <a
+      href="#"
+      class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
+      >Chicago</a
+    >
+    <a
+      href="#"
+      class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
+      >FGV/DAPP Brazil</a
+    >
+    <a
+      href="#"
+      class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
+      >HSE University</a
+    >
+    <a
+      href="#"
+      class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
+      >Helsinki</a
+    >
+    <a
+      href="#"
+      class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
+      >Hong Kong</a
+    >
+    <a
+      href="#"
+      class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
+      >Howard/Mathematica</a
+    >
+    <a
+      href="#"
+      class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
+      >Istanbul</a
+    >
+    <a
+      href="#"
+      class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
+      >Law</a
+    >
+    <a
+      href="#"
+      class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
+      >Lisbon</a
+    >
+    <a
+      href="#"
+      class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
+      >London</a
+    >
+    <a
+      href="#"
+      class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
+      >Los Angeles</a
+    >
+    <a
+      href="#"
+      class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
+      >Montréal</a
+    >
+    <a
+      href="#"
+      class="list-group-item list-group-item-action d-flex justify-content-between align-items-center active"
+      >Oxford <span class="badge badge-light badge-pill">✔</span></a
+    >
+    <a
+      href="#"
+      class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
+      >Princeton University</a
+    >
+    <a
+      href="#"
+      class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
+      >Rutgers</a
+    >
+    <a
+      href="#"
+      class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
+      >Stellenbosch</a
+    >
+    <a
+      href="#"
+      class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
+      >Taipei, Taiwan (National Chengchi University)</a
+    >
+    <a
+      href="#"
+      class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
+      >Tokyo</a
+    >
+    <a
+      href="#"
+      class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
+      >Zürich</a
+    >
+    {% endcomment %}
+  </div>
+  <!--/list-group-->
+</div>
+<!--/col-->
