--- a/_includes/people_listing.html
+++ b/_includes/people_listing.html
@@ -5,6 +5,7 @@
 {% assign people = site.data[year][location].people %}
 {% for group in people %}
   {% if group[1].title == 'Faculty'%}
+  <hr class="mt-5 mb-4">  
   <h3 id={{group[0]}} class="h3 mb-4">{{group[1].title}}</h3>
   {% else %}
   <hr class="mt-5 mb-4">
