--- a/_includes/video/search.html
+++ b/_includes/video/search.html
@@ -2,7 +2,7 @@
 <div class="row">
   <div class="col-sm-12">
     <div class="alert alert-secondary border-0">
-      <form id="video_search_form">
+      <form id="video-search-form">
         <div class="input-group">
           <input name="q" type="text" class="form-control" placeholder="Search videos" aria-label="Search" aria-describedby="searchHelp">
           <div class="input-group-append">
