--- a/_includes/video/sidebar.html
+++ b/_includes/video/sidebar.html
@@ -32,124 +32,15 @@
       </div>
     </div>
   </div>
-  {% comment %}
-  <div class="list-group-item"><strong>Programing Languages</strong></div>
-  <a href="#" class="list-group-item list-group-item-action">Rust</a>
-  <a href="#" class="list-group-item list-group-item-action">Go</a>
-  <a href="#" class="list-group-item list-group-item-action">Python</a> {%
-  endcomment %}
-  <!--/list-group-->
 
+  {% for filter in site.video_listing.filters %}
   <div class="list-group mb-4">
-    {% comment %}
-    <div class="list-group-item"><strong>Location</strong></div>
-    <a
-      href="#"
-      class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
-      >Beijing</a
-    >
-    <a
-      href="#"
-      class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
-      >Bologna</a
-    >
-    <a
-      href="#"
-      class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
-      >Chicago</a
-    >
-    <a
-      href="#"
-      class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
-      >FGV/DAPP Brazil</a
-    >
-    <a
-      href="#"
-      class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
-      >HSE University</a
-    >
-    <a
-      href="#"
-      class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
-      >Helsinki</a
-    >
-    <a
-      href="#"
-      class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
-      >Hong Kong</a
-    >
-    <a
-      href="#"
-      class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
-      >Howard/Mathematica</a
-    >
-    <a
-      href="#"
-      class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
-      >Istanbul</a
-    >
-    <a
-      href="#"
-      class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
-      >Law</a
-    >
-    <a
-      href="#"
-      class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
-      >Lisbon</a
-    >
-    <a
-      href="#"
-      class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
-      >London</a
-    >
-    <a
-      href="#"
-      class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
-      >Los Angeles</a
-    >
-    <a
-      href="#"
-      class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
-      >Montréal</a
-    >
-    <a
-      href="#"
-      class="list-group-item list-group-item-action d-flex justify-content-between align-items-center active"
-      >Oxford <span class="badge badge-light badge-pill">✔</span></a
-    >
-    <a
-      href="#"
-      class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
-      >Princeton University</a
-    >
-    <a
-      href="#"
-      class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
-      >Rutgers</a
-    >
-    <a
-      href="#"
-      class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
-      >Stellenbosch</a
-    >
-    <a
-      href="#"
-      class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
-      >Taipei, Taiwan (National Chengchi University)</a
-    >
-    <a
-      href="#"
-      class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
-      >Tokyo</a
-    >
-    <a
-      href="#"
-      class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
-      >Zürich</a
-    >
-    {% endcomment %}
+
+    {%- include video/filter.html filter=filter -%}
+
   </div>
   <!--/list-group-->
+  {% endfor %}
+
 </div>
 <!--/col-->
