Toggle filter items when clicking

--- a/_includes/video/sidebar.html
+++ b/_includes/video/sidebar.html
@@ -34,7 +34,7 @@
   </div>
 
   {% for filter in site.video_listing.filters %}
-  <div class="list-group mb-4">
+  <div class="video-filter-group list-group mb-4">
 
     {%- include video/filter.html filter=filter -%}
 
