Connect filters to lunr
This includes... some copypasta from the existing people search, to
duplicate the logic. Further refactoring would DRY it up a bit and maybe
make a generic multi-search pattern. The data source and UI are slightly
different between people and video so it would take some care to make
that happen.

--- a/_includes/video/filter.html
+++ b/_includes/video/filter.html
@@ -43,6 +43,8 @@ standardize the capitalization for that item across all video files.
 
 <a href="#"
    id="video-filter-{{ filter_slug }}-{{ item_slug }}"
+   data-filter-key="{{ filter.key }}"
+   data-filter-value="{{ item }}"
    class="video-filter list-group-item list-group-item-action d-flex justify-content-between align-items-center"
 >{{ item_disp }} <span class="badge badge-light badge-pill">✔</span></a>
 {% endfor %}
