--- a/_includes/breadcrumb.html
+++ b/_includes/breadcrumb.html
@@ -12,11 +12,11 @@
                         {% if forloop.last %}
                             {% if page.title and breadcrumbs contains "_videos" %}
                             <li class="breadcrumb-item active" aria-current="page">{{ page.title }}</li>
-                            {% else %}                           
+                            {% else %}
                             <li class="breadcrumb-item active" aria-current="page">{{ breadcrumb | replace: "_", " " | capitalize | replace: "-", " " }}</li>
                             {% endif %}
                         {% elsif breadcrumb == '_videos' or breadcrumb == 'boot_camp' %}
-                            <li class="breadcrumb-item"><a href="{{site.baseurl | append: "/overview/" }}">Overview</a></li>
+                            <li class="breadcrumb-item"><a href="{{site.baseurl | append: "/overview" }}">Overview</a></li>
                         {% else %}
                             <li class="breadcrumb-item"><a href="/{{site.baseurl}}{{relative_breadcrumb_str}}">{{ breadcrumb | replace: "_", " " | capitalize }}</a></li>
                         {% endif %}
