--- a/_includes/schedule.html
+++ b/_includes/schedule.html
@@ -8,7 +8,11 @@
     <div class="card-header">
       <h5>
         <strong>
+	  {% if location == 'jias' %}
+	  {{ day.date | date: "%A %-d %B %Y" }}
+	  {% else %}
           {{ day.date | date: "%A %B %-d, %Y" }}
+	  {% endif %}
           {% if day.name %}
             - {{ day.name }}
           {% endif %}
